change buttons text

--- a/cqrs/Pages/Index.razor
+++ b/cqrs/Pages/Index.razor
@@ -13,9 +13,9 @@ Welcome to your new app.
 
 <div>@value</div>
 
-<button @onclick="RunCommand">Generate random numbers</button>
+<button @onclick="RunCommand">Generate random numbers stream</button>
 
-<button @onclick="RunQuery">Generate random numbers</button>
+<button @onclick="RunQuery">Generate single random number</button>
 
 @code {
     private int value;
